# web_crawler

./: .gitignore  Makefile  main.py  pyproject.toml
app/: __init__.py
app/analysis/: ecfr_analyzer.py
app/database/: __init__.py  db.py
app/retrieval/: __init__.py  ecfr_service.py
app/web/: api.py  run.py  ui.py
tests/: test_database.py  test_ecfr_service.py  test_integration.py
