[project]
name = "web-crawler"
version = "0.1.0"
description = ""
authors = [
    {name = "Zalasyu",email = "alec_moldovan@yahoo.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "requests (>=2.32.3,<3.0.0)",
    "requests-mock (>=1.12.1,<2.0.0)",
    "textstat (>=0.7.5,<0.8.0)",
    "beautifulsoup4 (>=4.13.3,<5.0.0)",
    "lxml (>=5.3.1,<6.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "fastapi (>=0.115.10,<0.116.0)",
    "gradio (>=5.20.0,<6.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "asyncio (>=3.4.3,<4.0.0)",
    "aiohttp (>=3.11.13,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"

